tests/snapshots/examples_fixtures/type_system__failing__158_match_tuple_guarded_only_non_exhaustive.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match over tuple domains is conservatively non-exhaustive without an unguarded catch-all arm.

  --> examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx:3:14
  |
3 |     let _x = match t {
  |              ^^^^^^^^^
4 |         (a, b) if a > 0 && b -> 1,
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Hint:
  Add an unguarded `_ -> ...` arm. Tuple exhaustiveness is checked conservatively.
== stdout ==
<not executed>
